<resources>
    <string name="app_name">Evaluacion32</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="administrador">administrador</string>
    <string name="confirmacion">confirmacion</string>
    <string name="bienvenida">bienvenida</string>
    <string name="formulario">formulario</string>
    <string name="inicio">inicio</string>
    <string name="informativa">informativa</string>
</resources>